# func_adl

./: .coveragerc  .flake8  .gitignore  .travis.yaml  .travis.yml  AGENTS.md  CITATION.cff  README.md  documentation.md  pyproject.toml  pytest.ini  setup.py  setup_func_adl.py  setup_func_adl_ast.py  version_info.py
.github/workflows/: ci.yml  docs  docs.yml  pypi.yaml  trigger_website_build.yml
docs/: conf.py  config.py  index.md  index.rst  structure.rst
docs/generic/: example_query.rst  query_operators.md  query_operators.rst  query_structure.md
docs/source/: conf.py  index.md
docs/uproot/: samples.rst
docs/xAOD/: calibration.md  configuration.rst  getting_setup.md  getting_setup.rst  getting_started.md  getting_started.rst  metadata.md  select.md  where.md
func_adl/: EventDataset.py  ObjectStream.py  __init__.py  event_dataset.py  functions.py  object_stream.py  query_ast.py  query_result_asts.py  type_based_replacement.py  util_ast.py  util_ast_LINQ.py  util_types.py
func_adl/ast/: __init__.py  aggregate_shortcuts.py  ast_hash.py  call_stack.py  func_adl_ast_utils.py  function_simplifier.py  meta_data.py  syntatic_sugar.py  tuple_simplifier.py
tests/: conftest.py  test_EventDataset.py  test_ObjectStream.py  test_event_dataset.py  test_object_stream.py  test_type_based_replacement.py  test_type_based_replacement_py310.py  test_util_ast.py  test_util_ast_LINQ.py  test_util_types.py  util_debug_ast.py
tests/ast/: test_aggregate_shortcuts.py  test_ast_hash.py  test_func_adl_ast_utils.py  test_function_simplifier.py  test_meta_data.py  test_syntatic_sugar.py  utils.py
tests/xAOD/: __init__.py
(+23 files in other folders)
