[tool.isort]
profile = "black"

[tool.black]
line-length = 99

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "func_adl"
description = "Functional Analysis Description Language Base Package"
readme = "README.md"
authors = [
    { name = "G. Watts (IRIS-HEP/UW Seattle)", email = "gwatts@uw.edu" }
]
maintainers = [
    { name = "Gordon Watts (IRIS-HEP/UW Seattle)", email = "gwatts@uw.edu" }
]
license = { text = "MIT" }
homepage = "https://github.com/iris-hep/func_adl"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.9",
    "Topic :: Software Development",
    "Topic :: Utilities"
]
dependencies = [
    "make-it-sync"
]
dynamic = ["version"]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "flake8",
    "coverage",
    "twine",
    "wheel",
    "astunparse",
    "black",
    "isort",
    "numpy",
    "hatch"
]

[project.scripts]
# No scripts defined in setup.py

[tool.hatch.version]
path = "func_adl/version.txt"

[tool.hatch.build.targets.sdist]
include = ["README.md"]

[tool.hatch.build.targets.wheel]
include = ["README.md"]
